# AI-Maze-Solver

./: .gitignore  Capstone.ipynb  README.md  app.py  pyproject.toml  requirements.txt
backend/: app.py  maze_solver.py  test_run.py
frontend/: index.html
